# aibuild-sdd-sample

./: .gitignore  README.md  plan.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh  start-servers.sh
.github/: CODEOWNERS  copilot-instructions.md  release.yml
.github/ISSUE_TEMPLATE/: sdd-feature.yml
.github/workflows/: ci.yml
app/: main.py
app/data/: store.py
app/models/: todo.py
app/routers/: todo.py
app/services/: todo.py
demo/: DEMO-SCRIPT.md  sample-issue.md
docs/: github-dotgithub-features.md
docs/spec-kit-template/: Plan.md  Tasks.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: TodoApp.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/hooks/: useTodos.ts
